# Peeriot-Rust-Vending-Machine

./: Cargo.toml
src/: main.rs  tasks.rs
src/tasks/: task1.rs  task2.rs  task3.rs  task4.rs  task5.rs  task6.rs
src/tasks/data/: machine.json
